2001-03-24  Martin Baulig  <baulig@suse.de>

	Applied the patch from Alexander Larsson which was sitting
	in gnome-libs/patches/libart.diff since February.
	[FIXME: Alex, can you please provide a ChangeLog?])

	* art_rgb_a_affine.[ch]: New files.

2001-01-07  Hans Breuer <Hans@Breuer.Org>
	* art_misc.c : embryonic change to use libart_lgpl on win32
	* libart.def : new file, exported functions for win32 dll
	* makefile.msc : handwritten for MSVC compiler

2000-09-30  Martin Baulig  <baulig@suse.de>

	* libart-2.0.pc.in: Provide pkg-config script.

	* configure.in: Create libart-2.0.pc from libart-2.0.pc.in.
	* Makefile.am (pkgconfig_DATA): Install the libart-2.0.pc
	script in `$(libdir)/pkgconfig'.

2000-08-15  Raph Levien  <raph@acm.org>

	* art_render.c (art_render_image_solid_negotiate): Only
	sets ART_IMAGE_SOURCE_CAN_COMPOSITE when a compositing
	callback is selected. Previously was causing segfaults on
	non-alpha images. Thanks to Leonard Rosenthol for spotting
	the bug.

Fri Jun 30 22:56:58 2000  Raph Levien  <raph@acm.org>

	* art_render.c (art_render_composite): Fixed a bug that caused
	it to ignore the alpha setting. Also art_render_composite_8().

2000-06-01  John Sullivan  <sullivan@eazel.com>

	* art_svp_render_aa.c: (art_svp_render_aa_iter_step):
	Made it build by correcting struct member name from
	Raph's previous checkin.

Wed May 31 11:10:58 2000  Raph Levien  <raph@acm.org>

	* art_svp_render_aa.c (art_svp_render_aa_iter_step): Updated
	n_steps_max in iter structure after steps reallocation.

Tue May 30 10:33:13 2000  Raph Levien  <raph@acm.org>

	* art_svp_render_aa.c (art_svp_render_aa_iter_step): Fixed not
	updating iter->steps when steps gets reallocated.

2000-05-30  Pavel Cisler <pavel@eazel.com>

	* art_rgba.c:
	Make it build -- fix a broken include.

Tue May 30 00:09:21 2000  Raph Levien  <raph@acm.org>

	* art_render_gradient.c (art_render_gradient_setpix): Fixed
	an off-by-one loop error.
